# screensaver.greynetic

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  kodi-screensaver-greynetic.install  rules
screensaver.greynetic/: addon.xml  addon.xml.in
screensaver.greynetic/resources/: settings.xml
screensaver.greynetic/resources/language/resource.language.af_za/: strings.po
screensaver.greynetic/resources/language/resource.language.am_et/: strings.po
screensaver.greynetic/resources/language/resource.language.ar_sa/: strings.po
screensaver.greynetic/resources/language/resource.language.az_az/: strings.po
screensaver.greynetic/resources/language/resource.language.be_by/: strings.po
screensaver.greynetic/resources/language/resource.language.bg_bg/: strings.po
screensaver.greynetic/resources/language/resource.language.bs_ba/: strings.po
screensaver.greynetic/resources/language/resource.language.ca_es/: strings.po
screensaver.greynetic/resources/language/resource.language.cs_cz/: strings.po
screensaver.greynetic/resources/language/resource.language.cy_gb/: strings.po
screensaver.greynetic/resources/language/resource.language.da_dk/: strings.po
screensaver.greynetic/resources/language/resource.language.de_de/: strings.po
screensaver.greynetic/resources/language/resource.language.el_gr/: strings.po
screensaver.greynetic/resources/language/resource.language.en_au/: strings.po
screensaver.greynetic/resources/language/resource.language.en_gb/: strings.po
screensaver.greynetic/resources/language/resource.language.en_nz/: strings.po
screensaver.greynetic/resources/language/resource.language.en_us/: strings.po
screensaver.greynetic/resources/language/resource.language.eo/: strings.po
screensaver.greynetic/resources/language/resource.language.es_ar/: strings.po
screensaver.greynetic/resources/language/resource.language.es_es/: strings.po
screensaver.greynetic/resources/language/resource.language.es_mx/: strings.po
screensaver.greynetic/resources/language/resource.language.et_ee/: strings.po
screensaver.greynetic/resources/language/resource.language.eu_es/: strings.po
screensaver.greynetic/resources/language/resource.language.fa_af/: strings.po
screensaver.greynetic/resources/language/resource.language.fa_ir/: strings.po
screensaver.greynetic/resources/language/resource.language.fi_fi/: strings.po
screensaver.greynetic/resources/language/resource.language.fo_fo/: strings.po
screensaver.greynetic/resources/language/resource.language.fr_ca/: strings.po
screensaver.greynetic/resources/language/resource.language.fr_fr/: strings.po
screensaver.greynetic/resources/language/resource.language.gl_es/: strings.po
screensaver.greynetic/resources/shaders/: frag.glsl  vert.glsl
src/: GreyNetic.cpp  GreyNetic.h
(+42 files in other folders)
